--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ nav ul li a .heart {
     margin: 0 10px;
 }
 
+.category-item h3 {
+    font-size: 1rem;
+}
+
 .category-item img {
     max-width: 4.4rem;
     height: 4.4rem;
